--- a/.tmux.conf
+++ b/.tmux.conf
@@ -278,6 +278,8 @@ bind PPage copy-mode -u  # to copymode and one page up (pgup/dn passed on)
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 
-bind-key C-c run "tmux save-buffer - | xclip -sel clip"
-bind-key C-v run "xclip -o | tmux load-buffer - && tmux paste-buffer"
+#  bind-key C-c run "tmux save-buffer - | xclip -sel clip"
+#  bind-key C-v run "xclip -o | tmux load-buffer - && tmux paste-buffer"
 
+bind C-c run "tmux save-buffer - | xsel -ib"
+bind C-v run "tmux set-buffer \"$(xsel -ob)\"; tmux paste-buffer"
