--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -67,7 +67,8 @@ abbreviate zabbix https://nasa.future.co.jp/zabbix/
 " s-ESC
 "autocmd LocationChange owa\\.future\\.co\\.jp js modes.passAllKeys = true
 
-set editor="gvim -f"
+" set editor="gvim -f"
+set editor="macvim -f"
 ""set editor="gnome-terminal --disable-factoy -x vim "
 
 " copy.js の設定
