--- a/.tmux.conf
+++ b/.tmux.conf
@@ -218,14 +218,6 @@ set -g visual-content off    # idem
 
 setw -g mode-keys vi
 
-#setw -g mode-mouse off  # on prevents mouse select on the terminal
-#set -g mouse-select-pane off  # on prevents mouse select in panes
-
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-
 setw -g utf8 on
 
 # window title
@@ -274,12 +266,15 @@ unbind PPage
 bind PPage copy-mode -u  # to copymode and one page up (pgup/dn passed on)
 
 
-#http://d.hatena.ne.jp/tokorom/20110321/1300699319
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+# マウス関連（デフォルトはONにしておいて、prefix+mで切替える）http://bit.ly/1N6URvr
+set-option -g mouse on
+bind-key m if-shell "tmux show-options -g mouse | grep off" "set-option -g mouse on" "set-option -g mouse off"
 
-#  bind-key C-c run "tmux save-buffer - | xclip -sel clip"
-#  bind-key C-v run "xclip -o | tmux load-buffer - && tmux paste-buffer"
+#  # Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-bind C-c run "tmux save-buffer - | xsel -ib"
-bind C-v run "tmux set-buffer \"$(xsel -ob)\"; tmux paste-buffer"
+#  # Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
