--- a/.tmux.conf
+++ b/.tmux.conf
@@ -212,20 +212,19 @@ set -g status-keys emacs
 set -g bell-action any
 set -g visual-bell on
 setw -g monitor-activity on  # monitor activity of all windows
-setw -g monitor-content on   # monitor for content changes as well
+#setw -g monitor-content on   # monitor for content changes as well
 set -g visual-activity off   # no flashy messages in my status line please! (watch the window attrs '#-*!+' instead)
-set -g visual-content off    # idem
+#set -g visual-content off    # idem
 
-setw -g mode-keys vi
 
-setw -g utf8 on
+#setw -g utf8 on
 
 # window title
 set -g set-titles on
 setw -g automatic-rename on
 
 # status bar
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status-justify centre
 set -g status-interval 5
 set -g status-left-length 30
@@ -270,11 +269,16 @@ bind PPage copy-mode -u  # to copymode and one page up (pgup/dn passed on)
 set-option -g mouse on
 bind-key m if-shell "tmux show-options -g mouse | grep off" "set-option -g mouse on" "set-option -g mouse off"
 
-#  # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
+#set-option -g default-command "reattach-to-user-namespace -l bash"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l fish"
+bind-key C-c run "tmux save-buffer - | xcopy -i"
+bind-key C-v run "xcopy -o | tmux load-buffer - && tmux paste-buffer"
+set-option -g default-shell /usr/local/bin/fish
 
-#  # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
+set -s escape-time 0
