--- a/.tigrc
+++ b/.tigrc
@@ -72,3 +72,5 @@ bind generic ca !?@git commit --amend --no-edit
 bind generic K view-help
 bind generic <C-w><C-w> view-next
 
+bind generic + !git commit --amend
+
