--- a/.tmux.conf
+++ b/.tmux.conf
@@ -133,16 +133,16 @@ unbind _
 bind -r _ split-window -v
 
 # swap panes
-unbind {
-bind -r { swap-pane -U
-unbind }
-bind -r } swap-pane -D
+unbind '{'
+bind -r '{' swap-pane -U
+unbind '}'
+bind -r '}' swap-pane -D
 
-# number panes visibly
+## number panes visibly
 unbind q
 bind q display-panes
 
-# cycle through pane layouts
+## cycle through pane layouts
 unbind Space
 bind -r Space next-layout
 
@@ -156,7 +156,7 @@ bind -r h select-pane -L
 unbind l
 bind -r l select-pane -R
 
-# resize pane
+## resize pane
 unbind '('
 bind -r '(' resize-pane -L 4
 unbind ')'
@@ -166,8 +166,7 @@ bind -r + resize-pane -U 2
 unbind -
 bind -r - resize-pane -D 2
 
-
-# command line
+## command line
 unbind :
 bind : command-prompt
 
@@ -177,108 +176,42 @@ unbind ?
 bind ? list-keys
 
 
-# apply the config file again...
+## apply the config file again...
 unbind r
 bind r source-file ~/.tmux.conf
 
-# page up and down
-#   --> this has to be done for the shell, vi aparently works well.
-
-# TODO:
-# * keybindings for detaching/attaching
-# * for session/client/buffer management
-# * for buffer filling and pasting
-# * mouse scroll fix
-# * mouse click focus
-# * alt-tab style feature request
-# * select+move splitters (need splitter highlighting)
-# * quake style "toggle terminal from above", bound to "~"
-
-
-# its not logic to have the most left 'tab' on the very right of the key strip
-set -g base-index 1
-
-# should fix scrolling issues (with shift pgup/dn)
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-
-# some general config options
+## some general config options
 set -g default-terminal "screen-256color"
 set -g history-limit 100000
 set -g repeat-time 800
 
-set -g status on
-set -g status-keys emacs
+#set -g status on
+#set -g status-keys emacs
 
 set -g bell-action any
 set -g visual-bell on
-setw -g monitor-activity on  # monitor activity of all windows
-#setw -g monitor-content on   # monitor for content changes as well
-set -g visual-activity off   # no flashy messages in my status line please! (watch the window attrs '#-*!+' instead)
-#set -g visual-content off    # idem
 
-
-#setw -g utf8 on
-
-# window title
+## window title
 set -g set-titles on
 setw -g automatic-rename on
-
-# status bar
-#set -g status-utf8 on
-set -g status-justify centre
-set -g status-interval 5
-set -g status-left-length 30
-set -g status-left ''
-set -g status-right '#[fg=blue,bold]#H#[default] #[fg=green]» #[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=green]» #[fg=cyan]#S#[default] #[fg=green]» #[fg=red]#(acpi | cut -d "," -f 2 | sed "s/^ *//g") #[fg=green]» #[fg=magenta]%R#[default]'
-set -g status-right-length 45
-
-# colors
-set -g message-bg default
-set -g message-fg green
-set -g status-bg default
-set -g status-fg green
-setw -g window-status-bg default
-setw -g window-status-fg green
-# setw -g window-status-alert-attr none
-# setw -g window-status-alert-bg default
-# setw -g window-status-alert-fg green
-#setw -g window-status-current-bg red setw -g window-status-current-fg black
-
-#bind o send 'Enter' \; saveb /tmp/.tmux-exchange \; run-shell 'xsel -i < /tmp/.tmux-exchange; xsel -i -b < /tmp/.tmux-exchange'
-
-#for vim-powerline https://github.com/Lokaltog/vim-powerline
-set -g default-terminal "screen-256color"
-
-# For Mac OSX
-# http://d.hatena.ne.jp/tmatsuu/20111220/1324399472
-# set-option -g default-command "~/bin/reattach-to-user-namespace -l $SHELL"
-# bind-key C-c run "tmux save-buffer - | ~/bin/reattach-to-user-namespace pbcopy"
-# bind-key C-v run "~/bin/reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
 
 # copy and scroll mode (see "man tmux"), and paste
 unbind [
 bind -r [ copy-mode
-unbind ]
-bind -r ] paste-buffer -s \015  # sadly '-r' doesnt work here, hopefully one day it does
-unbind PPage
-bind PPage copy-mode -u  # to copymode and one page up (pgup/dn passed on)
-
-
-# マウス関連（デフォルトはONにしておいて、prefix+mで切替える）http://bit.ly/1N6URvr
-set-option -g mouse on
-bind-key m if-shell "tmux show-options -g mouse | grep off" "set-option -g mouse on" "set-option -g mouse off"
-
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
-#set-option -g default-command "reattach-to-user-namespace -l bash"
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
-set-option -g default-command "reattach-to-user-namespace -l fish"
-bind-key C-c run "tmux save-buffer - | xcopy -i"
-bind-key C-v run "xcopy -o | tmux load-buffer - && tmux paste-buffer"
-set-option -g default-shell /usr/local/bin/fish
 
-set -s escape-time 0
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
